<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AgendaxAJ2L</string>
    <string name="insertar">Insertar Tarea</string>
    <string name="insertar2">VerDetalles</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detalle">DetalleActivity</string>
    <string name="hello_world">AgendaX</string>
    <string name="title_activity_insertar">InsertarActivity</string>
    <string name="guardar">Guardar</string>
    <string name="titulolbl">Titulo</string>
    <string name="horalbl">Hora</string>
    <string name="lugarlbl">Lugar</string>
    <string name="descripcionlbl">Descripcion</string>
    <string name="load">Cargar Datos</string>
    <string name="inicio">Pantalla Principal</string>

</resources>