<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.agendaxaj2l.DetalleActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <ListView
        android:id="@+id/ListaAgendax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />
    
    <TableRow>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="cargarOnClick"
                android:text="@string/load" />
            
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="startOnClick"
                android:text="@string/inicio" />
            
    </TableRow>
    
</RelativeLayout>
